EKS-K8s/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-application-lb
spec:
  controllerName: gateway.k8s.aws/alb
